[workspace]
members = [
    "donation",
    "lists",
    "pot",
    "pot_factory",
    "registry",
    "sybil-v1",
    "sybil",
    "sybil_provider_simulator"
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
