[package]
name = "potlock-campaigns"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
chrono = "0.4.38"
near-sdk = { version = "5.3.0", features = ["unstable"] }

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.14", features = ["full"] }
# near-sdk = { version = "5.3.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }

# near-sdk = "5.0.0-alpha.2"
# [profile.release] # removed as added to root Cargo.toml
# codegen-units = 1
# # Tell `rustc` to optimize for small code size.
# opt-level = "z"
# lto = true
# debug = false
# panic = "abort"
# # Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
# overflow-checks = true
